started styling the site -  add a new home content

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Hi</h1>
+
+    <main id="center">
+        <h2>Hi</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum eaque eligendi cupiditate consequatur ducimus, quaerat itaque vel corporis ad eum non, aperiam voluptate molestiae excepturi reprehenderit eos! Maxime, incidunt facilis.</p>
     </main>
+    <footer>Copyright 2018</footer>
 </body>
 </html>
