started styling the site, added new home content

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Hi</h1>
+    <main id="center">
+        <h2>Hi friend</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur maxime odit, delectus provident a amet nemo! Laborum exercitationem cupiditate, asperiores ut magnam itaque similique, harum suscipit sint inventore dolores fugit?</p>
     </main>
+    <footer>copyright 2020</footer>
 </body>
 </html>
