made minor modifications

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </ul>
         </nav>
     </header>
-    <main id="center">
+    <main id="centerThing">
         <h2>Hi friend</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur maxime odit, delectus provident a amet nemo! Laborum exercitationem cupiditate, asperiores ut magnam itaque similique, harum suscipit sint inventore dolores fugit?</p>
     </main>
-    <footer>copyright 2020</footer>
+    <footer>copyright 2021</footer>
 </body>
 </html>
